--- a/src/components/Docentes/Docentes.css
+++ b/src/components/Docentes/Docentes.css
@@ -1,10 +1,10 @@
 a {
     font-weight: 500;
-    color: #646cff;
+    color: #e3e4fa;
     text-decoration: inherit;
   }
 a:hover {
-color: #535bf2;
+color: #c6c8ee;
 }
 
 body {
@@ -32,7 +32,7 @@ cursor: pointer;
 transition: border-color 0.25s;
 }
 button:hover {
-border-color: #646cff;
+border-color: #cdcff5;
 }
 button:focus,
 button:focus-visible {
